--- a/modify.html
+++ b/modify.html
@@ -358,7 +358,7 @@
             <div>
                 <button onclick = "sum()" id = "sum" class = "button-modify">수정(등록)</button>
                 <button class = "button-delete">해당 일 전체 삭제</button>
-                <button onclick = "location.href = 'list.html'" class = "button-info">육아정보</button>
+                <button onclick = "location.href = 'index.html'" class = "button-info">육아정보</button>
             </div>
 
         </div>
