--- a/write.html
+++ b/write.html
@@ -114,7 +114,7 @@
 
             <div>
                 <button onclick = "btn_modify1()" class ="button-modify">등록</button>
-                <button onclick = "location.href = 'list.html'" class="button-info" >육아정보</button>
+                <button onclick = "location.href = 'index.html'" class="button-info" >육아정보</button>
             </div>
 
         </div>
